Fixed layout issues

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -13,6 +13,10 @@ $secondary-light-color: #ffffb1 !default;
 $white: #ffffff;
 $light-grey: #dddddd;
 
+$text-color-primary: rgba(0,0,0,0.87);
+$text-color-secondary: #333;
+
+
 // SIZES
 $text-size-xl: 1.8em;
 $text-size-l: 1.5em;
